load("@rules_cc//cc:defs.bzl", "cc_test")

cc_library(
    name = "test_utils",
    hdrs = ["test_utils.h"],
    srcs = ["test_utils.cc"],
    deps = [
        "//search:graph",
    ],
)

cc_test(
    name = "graph_test",
    size = "small",
    srcs = ["graph_test.cc"],
    deps = [
        ":test_utils",
        "//search:graph",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "a_star_test",
    size = "small",
    srcs = ["a_star_test.cc"],
    deps = [
        ":test_utils",
        "//search:graph",
        "//search:a_star",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
